# automation-intent-capture-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/configs/: Dev.env
.github/scripts/: smoke-test.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
doc/design/: voice-streaming-fix.md
frontend/: .env.example  .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: audio-processor.js  config.js
frontend/src/: App.tsx  main.tsx
specs/001-websocket-audio-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bidi-nova-sonic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-voice-intent-elicitation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-dynamo-session-state/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-browser-frontend/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-slack-notifications/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-vite6-cognito-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-auth-cognito-waf/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/011-deploy-voice-infra/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/intent_capture_agent/: __init__.py  cli.py
terraform/: backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
(+202 files in other folders)
