[project]
name = "intent-capture-agent"
version = "0.1.0"
description = "Multi-channel intent capture — meet stakeholders where they are."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "structlog>=24.0.0",
    "aws-embedded-metrics>=3.2.0",
    "aws-xray-sdk>=2.14.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "strands-agents[bidi]>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
intent-capture = "intent_capture_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_server", "src/intent_capture_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
